Added odlvpn2bgpd git (Cap'N'Proto to Thrift Interface)
Signed-off-by: Martin Winter <mwinter@netdef.org>

--- a/debian_template/control
+++ b/debian_template/control
@@ -10,7 +10,7 @@ Homepage: http://www.quagga.net/
 
 Package: opnfv-quagga
 Architecture: any
-Depends: ${shlibs:Depends}, logrotate (>= 3.2-11), iproute, ${misc:Depends}
+Depends: ${shlibs:Depends}, logrotate (>= 3.2-11), iproute, ${misc:Depends}, python (< 3.0)
 Pre-Depends: adduser
 Conflicts: zebra, zebra-pj, quagga
 Replaces: zebra, zebra-pj, quagga
