--- a/debian_template/my/qthriftd.conf
+++ b/debian_template/my/qthriftd.conf
@@ -1,7 +1,10 @@
 #
 # Config File for Quagga Thriftd Interface
 #
-local_thrift_port=7644
-odl_controller_IP=127.0.0.1
-odl_controller_thrift_port=6644
+# Defaults shown below. If nothing is specified, then defaults are used
+
+#local_thrift_IP=127.0.0.1
+#local_thrift_port=7644
+#odl_controller_IP=127.0.0.1
+#odl_controller_thrift_port=6644
 
