--- a/debian_template/my/qthriftd.conf
+++ b/debian_template/my/qthriftd.conf
@@ -8,3 +8,7 @@
 #odl_controller_IP=127.0.0.1
 #odl_controller_thrift_port=6644
 
+# Uncomment the followin line to enable debug output from the
+# thrift daemon to syslog (usually /var/log/syslog or /var/log/messages)
+#qthriftd_debug_log=yes
+
