--- a/debian_template/opnfv-quagga.service
+++ b/debian_template/opnfv-quagga.service
@@ -4,6 +4,7 @@ After=network-online.target
 Wants=network-online.target
 
 [Service]
+ExecStartPre=/usr/bin/install -m 755 -o quagga -g quagga -d /var/run/quagga
 ExecStart=/usr/lib/quagga/qthrift/odlvpn2bgpd.py
 Restart=on-failure
 
