--- a/debian_template/control
+++ b/debian_template/control
@@ -2,15 +2,14 @@ Source: opnfv-quagga
 Section: net
 Priority: optional
 Maintainer: Martin Winter <mwinter@netdef.org>
-XSBC-Original-Maintainer: Christian Hammers <ch@debian.org>
 Uploaders: Martin Winter <mwinter@netdef.org>
-Build-Depends: debhelper (>= 7.0.50~), dh-systemd (>= 1.4), libncurses5-dev, libreadline-dev, texlive-latex-base, texlive-generic-recommended, libpam0g-dev | libpam-dev, libcap-dev, texinfo (>= 4.7), imagemagick, ghostscript, groff, po-debconf, autotools-dev, hardening-wrapper, libpcre3-dev, gawk, chrpath
+Build-Depends: debhelper (>= 7.0.50~), dh-systemd (>= 1.4), libncurses5-dev, libreadline-dev, texlive-latex-base, texlive-generic-recommended, libpam0g-dev | libpam-dev, libcap-dev, texinfo (>= 4.7), imagemagick, ghostscript, groff, po-debconf, autotools-dev, libpcre3-dev, gawk, chrpath
 Standards-Version: 3.9.5
 Homepage: http://www.quagga.net/
 
 Package: opnfv-quagga
 Architecture: any
-Depends: ${shlibs:Depends}, bsdutils, logrotate (>= 3.2-11), iproute, ${misc:Depends}, python (>= 2.7), python-zmq, libcapnp-0.5.99, python-pycapnp, python-thriftpy (>= 0.3.2+netdef)
+Depends: ${shlibs:Depends}, logrotate (>= 3.2-11), iproute, ${misc:Depends}, python (>= 2.7), python-zmq, libcapnp-0.5.99, python-pycapnp, python-thriftpy (>= 0.3.2+netdef)
 Pre-Depends: adduser
 Conflicts: zebra, zebra-pj, quagga
 Replaces: zebra, zebra-pj, quagga
