--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 quaggasrc
+quaggasrc-rpm
 depend
 temp
 debian_package
+rpm_package
 opnfv-quagga_*.build
 opnfv-quagga_*.changes
 opnfv-quagga*.deb
@@ -9,4 +11,3 @@ opnfv-quagga_*.debian.tar.gz
 opnfv-quagga_*.dsc
 opnfv-quagga_*.orig.tar.gz
 opnfv-quagga_*.debian.tar.xz
-
